# Nest

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
NestApp/: CMakeLists.txt
NestApp/src/: Core.h  NestApp.h  nestpch.cpp  nestpch.h
NestApp/src/Core/: Action.cpp  Action.h  Application.cpp  Application.h  RibbonPage.cpp  RibbonPage.h
NestApp/src/Utils/: Log.cpp  Log.h
NestUI/: CMakeLists.txt
NestUI/src/: Base.h  NestUI.h  nestuipch.cpp  nestuipch.h
NestUI/src/Core/: DockWidgetManager.cpp  DockWidgetManager.h
NestUI/src/GUI/: DockWidget.cpp  DockWidget.h  MainWindow.cpp  MainWindow.h  NestMainWindow.cpp  NestMainWindow.h
example/: CMakeLists.txt
example/src/: MainWindow.cpp  MainWindow.h  main.cpp
